Change the document

--- a/assignments/day-4/registration.html
+++ b/assignments/day-4/registration.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h2>student registation form</h2>
+    <h2>student registration form</h2>
     <div>
         student name <input type="name_input" placeholder="enter your name"><br><br>
         student age <input type="age_input" placeholder="enter your age"><br><br>
